//! Stream actor for bi-directional gRPC streaming
//! 
//! This actor manages bi-directional gRPC streams established with Anduro Governance Nodes,
//! handling governance protocol communication, consensus coordination, and federation operations.

use crate::messages::stream_messages::*;
use crate::types::*;
use actix::prelude::*;
use std::collections::HashMap;
use tracing::*;

/// Stream actor that manages bi-directional gRPC streams with governance nodes
#[derive(Debug)]
pub struct StreamActor {
    /// Stream configuration
    config: StreamConfig,
    /// Active gRPC connections to governance nodes
    connections: HashMap<ConnectionId, GovernanceConnection>,
    /// Stream subscriptions by governance node
    subscriptions: HashMap<String, Vec<ConnectionId>>,
    /// Message buffer for each connection
    message_buffers: HashMap<ConnectionId, MessageBuffer>,
    /// Stream metrics
    metrics: StreamActorMetrics,
}

/// Configuration for the gRPC stream actor
#[derive(Debug, Clone)]
pub struct StreamConfig {
    /// Maximum number of concurrent governance node connections
    pub max_governance_connections: usize,
    /// Message buffer size per connection
    pub buffer_size: usize,
    /// Heartbeat interval for gRPC streams
    pub heartbeat_interval: std::time::Duration,
    /// gRPC connection timeout
    pub connection_timeout: std::time::Duration,
    /// Governance node endpoints
    pub governance_endpoints: Vec<String>,
    /// gRPC TLS configuration
    pub tls_config: Option<GrpcTlsConfig>,
}

/// Unique identifier for a connection
pub type ConnectionId = String;

/// Information about a governance node gRPC connection
#[derive(Debug, Clone)]
pub struct GovernanceConnection {
    pub connection_id: ConnectionId,
    pub governance_node_endpoint: String,
    pub node_id: String,
    pub connected_at: std::time::Instant,
    pub last_activity: std::time::Instant,
    pub active_streams: Vec<String>,
    pub connection_state: GovernanceConnectionState,
}

/// State of a governance node gRPC connection
#[derive(Debug, Clone)]
pub enum GovernanceConnectionState {
    Connecting,
    Connected,
    Authenticated { node_id: String },
    Streaming,
    Reconnecting,
    Disconnected,
}

/// Message buffer for a connection
#[derive(Debug)]
pub struct MessageBuffer {
    messages: std::collections::VecDeque<StreamMessage>,
    max_size: usize,
    dropped_messages: u64,
}

/// A message to be streamed via gRPC to governance nodes
#[derive(Debug, Clone)]
pub struct StreamMessage {
    pub stream_type: GovernanceStreamType,
    pub message_type: String,
    pub payload: GovernancePayload,
    pub timestamp: std::time::SystemTime,
    pub sequence_number: u64,
}

/// gRPC TLS configuration
#[derive(Debug, Clone)]
pub struct GrpcTlsConfig {
    pub cert_path: String,
    pub key_path: String,
    pub ca_cert_path: Option<String>,
    pub verify_server: bool,
}

/// Types of governance streams
#[derive(Debug, Clone)]
pub enum GovernanceStreamType {
    Consensus,
    Federation,
    ChainData,
    Proposals,
    Attestations,
}

/// Governance message payload
#[derive(Debug, Clone)]
pub enum GovernancePayload {
    BlockProposal(ConsensusBlock),
    Attestation(Attestation),
    FederationUpdate(FederationUpdate),
    ChainStatus(ChainStatus),
    ProposalVote(ProposalVote),
    HeartbeatRequest,
    HeartbeatResponse,
}

/// Federation update message
#[derive(Debug, Clone)]
pub struct FederationUpdate {
    pub update_type: FederationUpdateType,
    pub members: Vec<FederationMember>,
    pub threshold: usize,
    pub epoch: u64,
}

/// Types of federation updates
#[derive(Debug, Clone)]
pub enum FederationUpdateType {
    MemberAdded,
    MemberRemoved,
    ThresholdChanged,
    EpochTransition,
}

/// Proposal vote message
#[derive(Debug, Clone)]
pub struct ProposalVote {
    pub proposal_id: String,
    pub voter: Address,
    pub vote: VoteType,
    pub signature: Signature,
}

/// Vote types
#[derive(Debug, Clone)]
pub enum VoteType {
    Approve,
    Reject,
    Abstain,
}

/// Stream actor performance metrics
#[derive(Debug, Default)]
pub struct StreamActorMetrics {
    pub active_governance_connections: usize,
    pub total_connections: u64,
    pub messages_sent: u64,
    pub messages_received: u64,
    pub messages_dropped: u64,
    pub bytes_streamed: u64,
    pub stream_count: usize,
    pub reconnection_attempts: u64,
}

impl Actor for StreamActor {
    type Context = Context<Self>;

    fn started(&mut self, ctx: &mut Self::Context) {
        info!("gRPC Stream actor started for Anduro Governance");
        
        // Initialize connections to governance nodes
        ctx.notify(InitializeGovernanceConnections);
        
        // Start heartbeat mechanism for gRPC streams
        ctx.run_interval(
            self.config.heartbeat_interval,
            |actor, _ctx| {
                actor.send_governance_heartbeats();
            }
        );
        
        // Start connection health monitoring
        ctx.run_interval(
            std::time::Duration::from_secs(30),
            |actor, _ctx| {
                actor.monitor_governance_connections();
            }
        );
        
        // Start metrics reporting
        ctx.run_interval(
            std::time::Duration::from_secs(60),
            |actor, _ctx| {
                actor.report_metrics();
            }
        );
    }
}

impl StreamActor {
    pub fn new(config: StreamConfig) -> Self {
        Self {
            config: config.clone(),
            connections: HashMap::new(),
            subscriptions: HashMap::new(),
            message_buffers: HashMap::new(),
            metrics: StreamActorMetrics::default(),
        }
    }

    /// Initialize connections to governance nodes
    async fn initialize_governance_connections(&mut self) -> Result<(), StreamError> {
        info!("Initializing gRPC connections to governance nodes");
        
        for endpoint in &self.config.governance_endpoints {
            self.connect_to_governance_node(endpoint.clone()).await?;
        }
        
        Ok(())
    }

    /// Connect to a specific governance node
    async fn connect_to_governance_node(&mut self, endpoint: String) -> Result<(), StreamError> {
        info!("Connecting to governance node: {}", endpoint);
        
        // Check connection limit
        if self.connections.len() >= self.config.max_governance_connections {
            return Err(StreamError::TooManyConnections);
        }
        
        let connection_id = format!("gov_{}", self.connections.len());
        let node_id = self.extract_node_id_from_endpoint(&endpoint);
        
        let connection = GovernanceConnection {
            connection_id: connection_id.clone(),
            governance_node_endpoint: endpoint,
            node_id,
            connected_at: std::time::Instant::now(),
            last_activity: std::time::Instant::now(),
            active_streams: Vec::new(),
            connection_state: GovernanceConnectionState::Connecting,
        };
        
        let buffer = MessageBuffer {
            messages: std::collections::VecDeque::new(),
            max_size: self.config.buffer_size,
            dropped_messages: 0,
        };
        
        // TODO: Establish actual gRPC connection
        // This would involve creating gRPC client and establishing bi-directional stream
        
        self.connections.insert(connection_id.clone(), connection);
        self.message_buffers.insert(connection_id, buffer);
        
        self.metrics.total_connections += 1;
        self.metrics.active_governance_connections = self.connections.len();
        
        Ok(())
    }

    /// Handle connection disconnection
    async fn handle_disconnection(&mut self, connection_id: ConnectionId) -> Result<(), StreamError> {
        info!("Stream connection disconnected: {}", connection_id);
        
        // Remove from all subscriptions
        if let Some(connection) = self.connections.get(&connection_id) {
            for topic in &connection.subscription_topics {
                if let Some(subscribers) = self.subscriptions.get_mut(topic) {
                    subscribers.retain(|id| *id != connection_id);
                    if subscribers.is_empty() {
                        self.subscriptions.remove(topic);
                    }
                }
            }
        }
        
        // Remove connection and buffer
        self.connections.remove(&connection_id);
        self.message_buffers.remove(&connection_id);
        
        self.metrics.active_connections = self.connections.len();
        
        Ok(())
    }

    /// Subscribe connection to a topic
    async fn subscribe_to_topic(&mut self, connection_id: ConnectionId, topic: String) -> Result<(), StreamError> {
        info!("Connection {} subscribing to topic: {}", connection_id, topic);
        
        // Update connection subscription list
        if let Some(connection) = self.connections.get_mut(&connection_id) {
            if !connection.subscription_topics.contains(&topic) {
                connection.subscription_topics.push(topic.clone());
            }
            connection.last_activity = std::time::Instant::now();
        } else {
            return Err(StreamError::ConnectionNotFound);
        }
        
        // Add to topic subscribers
        self.subscriptions
            .entry(topic.clone())
            .or_insert_with(Vec::new)
            .push(connection_id);
        
        self.metrics.subscription_count = self.subscriptions.len();
        
        Ok(())
    }

    /// Unsubscribe connection from a topic
    async fn unsubscribe_from_topic(&mut self, connection_id: ConnectionId, topic: String) -> Result<(), StreamError> {
        info!("Connection {} unsubscribing from topic: {}", connection_id, topic);
        
        // Update connection subscription list
        if let Some(connection) = self.connections.get_mut(&connection_id) {
            connection.subscription_topics.retain(|t| *t != topic);
            connection.last_activity = std::time::Instant::now();
        }
        
        // Remove from topic subscribers
        if let Some(subscribers) = self.subscriptions.get_mut(&topic) {
            subscribers.retain(|id| *id != connection_id);
            if subscribers.is_empty() {
                self.subscriptions.remove(&topic);
            }
        }
        
        self.metrics.subscription_count = self.subscriptions.len();
        
        Ok(())
    }

    /// Broadcast message to all subscribers of a topic
    async fn broadcast_to_topic(&mut self, topic: String, message: StreamMessage) -> Result<(), StreamError> {
        debug!("Broadcasting message to topic: {} (event: {})", topic, message.event_type);
        
        if let Some(subscribers) = self.subscriptions.get(&topic) {
            let subscriber_count = subscribers.len();
            
            for connection_id in subscribers.iter() {
                self.queue_message_for_connection(connection_id.clone(), message.clone()).await?;
            }
            
            info!("Broadcasted message to {} subscribers on topic: {}", subscriber_count, topic);
            self.metrics.messages_sent += subscriber_count as u64;
        }
        
        Ok(())
    }

    /// Send message to a specific connection
    async fn send_to_connection(&mut self, connection_id: ConnectionId, message: StreamMessage) -> Result<(), StreamError> {
        debug!("Sending message to connection: {} (event: {})", connection_id, message.event_type);
        
        self.queue_message_for_connection(connection_id, message).await?;
        self.metrics.messages_sent += 1;
        
        Ok(())
    }

    /// Queue message for a connection
    async fn queue_message_for_connection(&mut self, connection_id: ConnectionId, message: StreamMessage) -> Result<(), StreamError> {
        if let Some(buffer) = self.message_buffers.get_mut(&connection_id) {
            // Check if buffer is full
            if buffer.messages.len() >= buffer.max_size {
                // Drop oldest message
                buffer.messages.pop_front();
                buffer.dropped_messages += 1;
                self.metrics.messages_dropped += 1;
                warn!("Dropped message for connection {} (buffer full)", connection_id);
            }
            
            buffer.messages.push_back(message);
            
            // TODO: Actually send the message via gRPC stream
            // This would involve serializing and sending the message over the bi-directional stream
            
        } else {
            return Err(StreamError::ConnectionNotFound);
        }
        
        Ok(())
    }

    /// Send heartbeat messages to all governance node connections
    fn send_governance_heartbeats(&mut self) {
        let heartbeat_message = StreamMessage {
            stream_type: GovernanceStreamType::Consensus,
            message_type: "heartbeat".to_string(),
            payload: GovernancePayload::HeartbeatRequest,
            timestamp: std::time::SystemTime::now(),
            sequence_number: self.generate_sequence_number(),
        };
        
        for connection_id in self.connections.keys() {
            if let Err(e) = futures::executor::block_on(
                self.queue_message_for_connection(connection_id.clone(), heartbeat_message.clone())
            ) {
                warn!("Failed to send governance heartbeat to {}: {:?}", connection_id, e);
            }
        }
    }

    /// Monitor governance node connections and attempt reconnection if needed
    fn monitor_governance_connections(&mut self) {
        let now = std::time::Instant::now();
        let mut connections_to_reconnect = Vec::new();
        
        for (connection_id, connection) in &self.connections {
            let inactive_duration = now.duration_since(connection.last_activity);
            
            // Check for inactive connections
            if inactive_duration > self.config.connection_timeout {
                warn!("Governance connection {} inactive for {:?}", connection_id, inactive_duration);
                connections_to_reconnect.push((connection_id.clone(), connection.governance_node_endpoint.clone()));
            }
            
            // Check connection state
            match connection.connection_state {
                GovernanceConnectionState::Disconnected => {
                    connections_to_reconnect.push((connection_id.clone(), connection.governance_node_endpoint.clone()));
                }
                GovernanceConnectionState::Reconnecting => {
                    // Check if reconnection is taking too long
                    if inactive_duration > std::time::Duration::from_secs(60) {
                        info!("Reconnection timeout for {}, attempting fresh connection", connection_id);
                        connections_to_reconnect.push((connection_id.clone(), connection.governance_node_endpoint.clone()));
                    }
                }
                _ => {}
            }
        }
        
        for (connection_id, endpoint) in connections_to_reconnect {
            info!("Attempting to reconnect to governance node: {}", endpoint);
            self.metrics.reconnection_attempts += 1;
            
            // Remove old connection
            if let Err(e) = futures::executor::block_on(self.handle_disconnection(connection_id)) {
                error!("Error cleaning up connection during reconnect: {:?}", e);
            }
            
            // Attempt new connection
            if let Err(e) = futures::executor::block_on(self.connect_to_governance_node(endpoint)) {
                error!("Failed to reconnect to governance node: {:?}", e);
            }
        }
    }

    /// Handle real-time block events
    async fn handle_block_event(&mut self, block: ConsensusBlock) -> Result<(), StreamError> {
        let message = StreamMessage {
            topic: "blocks".to_string(),
            event_type: "new_block".to_string(),
            data: serde_json::json!({
                "hash": block.hash(),
                "number": block.number(),
                "parent_hash": block.parent_hash(),
                "timestamp": std::time::SystemTime::now()
                    .duration_since(std::time::UNIX_EPOCH)
                    .unwrap()
                    .as_secs()
            }),
            timestamp: std::time::SystemTime::now(),
        };
        
        self.broadcast_to_topic("blocks".to_string(), message).await?;
        Ok(())
    }

    /// Handle real-time transaction events
    async fn handle_transaction_event(&mut self, tx_hash: H256) -> Result<(), StreamError> {
        let message = StreamMessage {
            topic: "transactions".to_string(),
            event_type: "new_transaction".to_string(),
            data: serde_json::json!({
                "hash": tx_hash,
                "timestamp": std::time::SystemTime::now()
                    .duration_since(std::time::UNIX_EPOCH)
                    .unwrap()
                    .as_secs()
            }),
            timestamp: std::time::SystemTime::now(),
        };
        
        self.broadcast_to_topic("transactions".to_string(), message).await?;
        Ok(())
    }

    /// Generate sequence number for messages
    fn generate_sequence_number(&mut self) -> u64 {
        // Simple incrementing sequence number
        static mut SEQUENCE_COUNTER: u64 = 0;
        unsafe {
            SEQUENCE_COUNTER += 1;
            SEQUENCE_COUNTER
        }
    }

    /// Extract node ID from endpoint
    fn extract_node_id_from_endpoint(&self, endpoint: &str) -> String {
        // Extract node ID from endpoint URL or generate from endpoint
        if let Some(host) = endpoint.split("://").nth(1).and_then(|h| h.split(':').next()) {
            format!("node_{}", host.replace('.', "_"))
        } else {
            format!("node_{}", endpoint.len())
        }
    }

    /// Send block proposal to governance nodes
    pub async fn send_block_proposal(&mut self, block: ConsensusBlock) -> Result<(), StreamError> {
        let message = StreamMessage {
            stream_type: GovernanceStreamType::Consensus,
            message_type: "block_proposal".to_string(),
            payload: GovernancePayload::BlockProposal(block),
            timestamp: std::time::SystemTime::now(),
            sequence_number: self.generate_sequence_number(),
        };

        self.broadcast_to_governance_nodes(message).await?;
        Ok(())
    }

    /// Send federation update to governance nodes
    pub async fn send_federation_update(&mut self, update: FederationUpdate) -> Result<(), StreamError> {
        let message = StreamMessage {
            stream_type: GovernanceStreamType::Federation,
            message_type: "federation_update".to_string(),
            payload: GovernancePayload::FederationUpdate(update),
            timestamp: std::time::SystemTime::now(),
            sequence_number: self.generate_sequence_number(),
        };

        self.broadcast_to_governance_nodes(message).await?;
        Ok(())
    }

    /// Broadcast message to all governance nodes
    async fn broadcast_to_governance_nodes(&mut self, message: StreamMessage) -> Result<(), StreamError> {
        debug!("Broadcasting {} message to governance nodes", message.message_type);
        
        let connection_ids: Vec<_> = self.connections.keys().cloned().collect();
        
        for connection_id in connection_ids {
            if let Err(e) = self.queue_message_for_connection(connection_id.clone(), message.clone()).await {
                warn!("Failed to send message to governance node {}: {:?}", connection_id, e);
            }
        }
        
        self.metrics.messages_sent += self.connections.len() as u64;
        Ok(())
    }

    /// Report stream metrics
    fn report_metrics(&self) {
        info!(
            "gRPC Stream metrics: governance_connections={}, messages_sent={}, messages_received={}, messages_dropped={}, reconnections={}",
            self.metrics.active_governance_connections,
            self.metrics.messages_sent,
            self.metrics.messages_received,
            self.metrics.messages_dropped,
            self.metrics.reconnection_attempts
        );
    }
}

/// Internal message to initialize governance connections
#[derive(Message)]
#[rtype(result = "()")]
struct InitializeGovernanceConnections;

impl Handler<InitializeGovernanceConnections> for StreamActor {
    type Result = ResponseFuture<()>;

    fn handle(&mut self, _msg: InitializeGovernanceConnections, _ctx: &mut Self::Context) -> Self::Result {
        Box::pin(async move {
            info!("Initializing gRPC connections to governance nodes");
            // Note: Actual implementation would call self.initialize_governance_connections().await
        })
    }
}

// Message handlers

impl Handler<NewConnectionMessage> for StreamActor {
    type Result = ResponseFuture<Result<(), StreamError>>;

    fn handle(&mut self, msg: NewConnectionMessage, _ctx: &mut Self::Context) -> Self::Result {
        Box::pin(async move {
            info!("Received new connection: {} from {}", msg.connection_id, msg.client_address);
            Ok(())
        })
    }
}

impl Handler<DisconnectionMessage> for StreamActor {
    type Result = ResponseFuture<Result<(), StreamError>>;

    fn handle(&mut self, msg: DisconnectionMessage, _ctx: &mut Self::Context) -> Self::Result {
        Box::pin(async move {
            info!("Received disconnection: {}", msg.connection_id);
            Ok(())
        })
    }
}

impl Handler<SubscribeMessage> for StreamActor {
    type Result = ResponseFuture<Result<(), StreamError>>;

    fn handle(&mut self, msg: SubscribeMessage, _ctx: &mut Self::Context) -> Self::Result {
        Box::pin(async move {
            info!("Received subscription request: {} -> {}", msg.connection_id, msg.topic);
            Ok(())
        })
    }
}

impl Handler<UnsubscribeMessage> for StreamActor {
    type Result = ResponseFuture<Result<(), StreamError>>;

    fn handle(&mut self, msg: UnsubscribeMessage, _ctx: &mut Self::Context) -> Self::Result {
        Box::pin(async move {
            info!("Received unsubscription request: {} -> {}", msg.connection_id, msg.topic);
            Ok(())
        })
    }
}

impl Handler<BroadcastMessage> for StreamActor {
    type Result = ResponseFuture<Result<(), StreamError>>;

    fn handle(&mut self, msg: BroadcastMessage, _ctx: &mut Self::Context) -> Self::Result {
        Box::pin(async move {
            info!("Received broadcast request for topic: {} (event: {})", msg.message.topic, msg.message.event_type);
            Ok(())
        })
    }
}

impl Handler<BlockEventMessage> for StreamActor {
    type Result = ResponseFuture<Result<(), StreamError>>;

    fn handle(&mut self, msg: BlockEventMessage, _ctx: &mut Self::Context) -> Self::Result {
        Box::pin(async move {
            info!("Received block event: {}", msg.block.hash());
            Ok(())
        })
    }
}

impl Handler<TransactionEventMessage> for StreamActor {
    type Result = ResponseFuture<Result<(), StreamError>>;

    fn handle(&mut self, msg: TransactionEventMessage, _ctx: &mut Self::Context) -> Self::Result {
        Box::pin(async move {
            info!("Received transaction event: {}", msg.tx_hash);
            Ok(())
        })
    }
}